@@ -199,8 +199,7 @@ let print_font_table pdf fontname pagenumber =
             done
     | _ -> failwith "addtext: font not found for width"
 
-(* Extracts font to font.dat in CWD. *)
-let extract_fontfile pagenumber fontname pdf =
+let extract_fontfile pagenumber fontname filename pdf =
   let resources = (select pagenumber (Pdfpage.pages_of_pagetree pdf)).Pdfpage.resources in
     match Pdf.lookup_direct pdf "/Font" resources with
     | None -> failwith "extract_fontfile: font not found"
@@ -212,31 +211,21 @@ let extract_fontfile pagenumber fontname pdf =
             | Pdftext.SimpleFont {Pdftext.fontdescriptor = Some {Pdftext.fontfile = Some fontfile}} ->
                 begin let objnum =
                   match fontfile with
-                  | Pdftext.FontFile i -> i
-                  | Pdftext.FontFile2 i -> i
-                  | Pdftext.FontFile3 i -> i
+                  | Pdftext.FontFile i | Pdftext.FontFile2 i | Pdftext.FontFile3 i -> i
                 in
                   match Pdf.lookup_obj pdf objnum with
                   | Pdf.Stream s as obj ->
                       Pdfcodec.decode_pdfstream pdf obj;
                       begin match s with
                       | {contents = (_, Pdf.Got bytes)} ->
-                           let fh = open_out_bin "font.dat" in
+                           let fh = open_out_bin filename in
                              for x = 0 to bytes_size bytes - 1 do output_byte fh (bget bytes x) done;
-                             close_out fh;
-                             (* Now try to read using Pdfcff module *)
-                             (*let font = Pdftruetype.to_type3 pdf font in*)
-                               (*let extractor = Pdftext.text_extractor_of_font pdf fontobj in*)
-                                 (*flprint "glyph names for incodes 0,1,2,3...";
-                                 iter print_string (Pdftext.glyphnames_of_text extractor "\000\001\002\003\004\005\006\007");
-                                 flprint "\n";*)
-                                 ()
+                             close_out fh
                       | _ -> failwith "extract_fontfile"
                       end
                   | _ -> failwith "extract_fontfile"
                 end
             | _ -> failwith "unsupported or unfound font"
-
 
 (* Remove Embedded fonts. This is done by removing the Font Descriptor. *)
 let remove_fontdescriptor pdf = function
